- Cleaned up some code. - Fixed 2 minor bugs that was happening.